# JeebsAI

./: ._target  .gitignore  ALL_405_ISSUES_FIXED.md  ANSWER.txt  API_DOC.md  BRAIN_PARSER_CHECKLIST.md  BRAIN_PARSER_DEPLOYMENT.md  BRAIN_PARSER_EXAMPLES.rs  BRAIN_PARSER_GIT_COMMIT.md  BRAIN_PARSER_IMPLEMENTATION_MANIFEST.md  BRAIN_PARSER_IMPLEMENTATION_SUMMARY.md  BRAIN_PARSER_INTEGRATION.md  BRAIN_PARSER_QUICK_REFERENCE.md  BRAIN_PARSER_READY_TO_PUSH.md  BRAIN_PARSER_START_HERE.md  BRAIN_PARSER_VISUAL_OVERVIEW.md  BRAIN_PARSING_API_FIXED.md  BRAIN_PARSING_FRAMEWORK.md  CHAT_405_COMPLETE_FIX.md  CHAT_405_COMPLETE_RESOLUTION.md  CHAT_405_FIX.md  CHAT_405_FIXED.md  CHAT_405_FIXED_FINAL.md  COMPILATION_FIX_VERIFICATION.md  COMPREHENSIVE_TRAINING_EXPANSION.txt  CORTEX_MISSING_FIXED.md  Cargo.toml  DATA_SYNTHESIS_COMPLETE.txt  DATA_SYNTHESIS_FINAL_SUMMARY.txt  DATA_SYNTHESIS_READY.txt  DEEP_LEARNING_IMPLEMENTATION_COMPLETE.md  DEEP_LEARNING_QUICK_GUIDE.md  DEEP_LEARNING_SYSTEM.md  DELIVERY_COMPLETE.md  DEPLOY_EVERYTHING.sh  DOCUMENTATION_INDEX.md  DUPLICATE_BRACES_FIXED_2.md  Dockerfile  ENHANCED_LEARNING_DELIVERY.md  ENHANCED_LEARNING_README.md  (+133 more)
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: GITHUB_ACTIONS_SETUP.md
.scratch/: mcp-state.json
admin/: logs.rs  status.rs
deploy/: jeebs.service
js/: chat.js  evolution.js
migrations/: 20240101000000_initial_setup.sql  20260303000004_create_cdhsc_proposals.sql
scripts/: add_webui_route.sh  bump_version.sh  check_webui_staging.sh  deploy_to_server.sh  disable_workflows.sh  final_path_sync.sh  (+12 more)
(+73 files in other folders)
