[package]
name = "jeebs"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
blake3 = "1.5"
zstd = "0.13"
chrono = "0.4"
meval = "0.2"
hex = "0.4"
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-logger = "0.6"
